# experiments

./: .gitignore  README.md  build-wasm.bat  component.wasm  memory_summary_20260608_162558.csv  run.bat  run_experiments_with_memory.ps1  test.py
data-generator/: Cargo.toml
data-generator/components/: component.wasm  component_qs.wasm  component_rs.wasm  component_usedonly.wasm  component_usedonly_opt.wasm
guest/: Cargo.toml
guest-qs/: Cargo.toml
guest-qs/src/: lib.rs  (+1 more)
guest-rs/: Cargo.toml
guest-rs/src/: bindings.rs  lib.rs
guest-rs/wit/: world.wit
host/: Cargo.toml  run_wasm.bat  run_wasm.sh
host/result/: experiment_results.csv  experiment_results_usedonly.csv  experiment_results_usedonly_opt.csv  plot.py
host/result/e1_e3_e5/: experiment_results.csv  experiment_results_usedonly.csv  experiment_results_usedonly_opt.csv
host/result/e1_e3_e5_backup/: experiment_results_usedonly.csv  experiment_results_usedonly_opt.csv
host/result/e2_e4_e5/: bidComponent100.csv  bidComponent10000.csv  bidComponent10000_usedonly.csv  bidComponent10000_usedonly_opt.csv  bidComponent100_usedonly.csv  bidComponent100_usedonly_opt.csv
host/result/e2_e4_e5_backup/: bidComponent10000.csv  bidComponent10000_usedonly.csv  bidComponent100_usedonly_opt.csv
host/src/: data.rs  e1.rs  e2.rs  e3.rs  either.rs  main.rs  wasm.rs
macros/: Cargo.toml
queries/rust/: Cargo.toml  config.toml
queries/rust/src/: cache.rs  data.rs  either.rs  main.rs  q1.rs  q2.rs  q3.rs  q4.rs  q5.rs  q6.rs  q7.rs  qs.rs  qw.rs  wasm.rs
runtime_tokio/: Cargo.toml
wasip3-adapter/: Cargo.toml
(+79 files in other folders)
