[workspace]

[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
nexmark = { version = "0.2.0", features = ["serde"] }
runtime = { path = "../runtime" }
smartstring = "1.0.1"
csv = "1.3.0"
smol_str = "0.2.0"
base64 = "0.22.1"
anyhow = "1.0.98"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
wasmtime = "32.0.0"
wasmtime-wasi = "32.0.0"
chrono = "0.4.41"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
