[workspace]

[package]
name = "rust-nexmark"
version = "0.0.0"
edition = "2021"

[dependencies]
nexmark = { version = "0.2.0", features = ["serde"] }
runtime = { path = "../../runtime" }
smartstring = "1.0.1"
csv = "1.3.0"
smol_str = "0.2.0"
wasmtime = { version = "30.0.2", features = ["incremental-cache", "cranelift"] }
wasmtime-wasi = "30.0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
